<resources>
    <string name="app_name">SmartCampus</string>
    <string name="signup_email">E Mail</string>
    <string name="signup_password">Password</string>
    <string name="signup_phone_number">Phone Number</string>
    <string name="signup_get_otp">GET OTP</string>
    <string name="already_an_user">Already an User?</string>
    <string name="log_in_text">LOG IN</string>
    <string name="otp_verification_text">OTP Verification</string>
    <string name="enter_the_otp_sent_to_text">Enter the OTP sent to</string>
    <string name="didn_t_receive_the_otp_text">Didn\'t receive the OTP?</string>
    <string name="resend_otp_text">Resend OTP</string>
    <string name="verify_otp_text">VERIFY OTP</string>
    <string name="smart_campus">Smart Campus</string>
    <string name="skip">Skip!</string>
    <string name="next">Next</string>
    <string name="log_in_to_your_account">Log in to your Account</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">LOG IN</string>
    <string name="new_here_get_started">New Here? Get Started!</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hostel">Hostel</string>
    <string name="profile">Profile</string>
    <string name="food">Food</string>
    <string name="your_profile">Your Profile</string>
    <string name="register_a_complaint">Register a Complaint</string>
    <string name="apply_for_leave">Apply for Leave</string>
    <string name="mess_menu">Mess Menu</string>
    <string name="order_sick_food">Order Sick Food</string>
    <string name="call_ambulace">Call Ambulace</string>
    <string name="notifications">Notifications</string>
    <string name="welcome_to_smart_campus">Welcome to Smart Campus</string>
    <string name="everything_at_your_palm">Everything at your palm!!</string>
    <string name="many_more">Daily Entries, Register Complaints and Many More</string>
    <string name="daily_night_entry">Daily Night Entry</string>
    <string name="add_your_complaint">Add Your Complaint</string>
    <string name="submit">Submit</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="all_hostel_contacts">All Hostel Contacts</string>
    <string name="caretaker">Caretaker</string>
    <string name="caretaker_2">Caretaker 2</string>
    <string name="guard_1">Guard 1</string>
    <string name="guard_2">Guard 2</string>
    <string name="select_your_canteen_text">SELECT YOUR CANTEEN</string>
    <string name="cafe_96_text">CAFE 96</string>
    <string name="yashnath_text">YASHNATH</string>
    <string name="cafe_96_menu_text">CAFE 96 MENU</string>
    <string name="add_to_cart_text">ADD TO CART</string>
</resources>