<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    app:cnb_unselectedColor="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/food"
        android:title="@string/food"
        android:icon="@drawable/ic_baseline_fastfood_24"
        app:cnb_backgroundColor = "@color/maincolor"
        app:cnb_iconColor = "#000000"
        app:cnb_textColor = "#000000"
        />
    <item
        android:id="@+id/hostel"
        android:icon="@drawable/ic_home"
        android:title="@string/hostel"
        app:cnb_backgroundColor = "@color/maincolor"
        app:cnb_iconColor="#000000"
        app:cnb_textColor="#000000" />
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        app:cnb_backgroundColor = "@color/maincolor"
        app:cnb_iconColor = "#000000"
        app:cnb_textColor = "#000000"
        />
</menu>