<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".user_activities.fragments.userHostelFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nightEntry"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/daily_night_entry"
            android:fontFamily="@font/nunito_bold"
            android:textSize="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/complaint"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/register_a_complaint"
            android:fontFamily="@font/nunito_bold"
            android:textSize="10dp"
            app:layout_constraintTop_toBottomOf="@+id/nightEntry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/leaveApplication"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/apply_for_leave"
            android:fontFamily="@font/nunito_bold"
            android:textSize="10dp"
            app:layout_constraintTop_toBottomOf="@+id/complaint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/contacts"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/all_hostel_contacts"
            android:fontFamily="@font/nunito_bold"
            android:textSize="10dp"
            app:layout_constraintTop_toBottomOf="@+id/leaveApplication"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ambulance"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/call_ambulace"
            android:fontFamily="@font/nunito_bold"
            android:textSize="10dp"
            app:layout_constraintTop_toBottomOf="@+id/contacts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/messMenu"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/mess_menu"
            android:fontFamily="@font/nunito_bold"
            android:textSize="10dp"
            app:layout_constraintTop_toBottomOf="@+id/ambulance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sickFood"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/order_sick_food"
            android:fontFamily="@font/nunito_bold"
            android:textSize="10dp"
            app:layout_constraintTop_toBottomOf="@+id/messMenu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/notifications"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="65dp"-->
<!--            android:layout_marginHorizontal="20dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:text="@string/notifications"-->
<!--            android:fontFamily="@font/nunito_bold"-->
<!--            android:textSize="10dp"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/sickFood"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"/>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>