<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_activities.UserComplaintActivity">

    <TextView
        android:id="@+id/texthead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_your_complaint"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/nunito_extrabold"
        android:textSize="30dp"
        android:textColor="@color/maincolor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdown"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/texthead"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:helperText="Required*"
        app:helperTextTextColor="#FF0000"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/category">

        <AutoCompleteTextView
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        app:boxStrokeColor="@color/offpink"
        app:boxStrokeErrorColor="#FF0000"
        app:counterEnabled="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        app:counterMaxLength="300"
        app:helperText="Required*"
        app:helperTextTextColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdown">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/complaintDescription"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="top"
            android:maxLines="15"
            android:textSize="15dp"
            tools:ignore="Deprecated" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>