<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_activities.UserHostelContactsActivity">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:text="@string/all_hostel_contacts"
        android:fontFamily="@font/nunito_bold"
        android:textSize="30dp"
        android:textColor="@color/maincolor"
        android:gravity="center"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/callIcon"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="20dp"
        android:src="@drawable/ic_baseline_call_24"
        android:layout_marginTop="140dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="142dp"
        android:textSize="25dp"
        android:textColor="@color/colorAccent"
        android:text="@string/caretaker"
        android:fontFamily="@font/nunito_semibold"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/callIcon"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/callIcon2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/callIcon"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="20dp"
        android:src="@drawable/ic_baseline_call_24"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contact2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="25dp"
        android:textColor="@color/colorAccent"
        android:text="@string/caretaker_2"
        android:fontFamily="@font/nunito_semibold"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/contact"
        app:layout_constraintStart_toEndOf="@id/callIcon"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/callIcon3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/callIcon2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="20dp"
        android:src="@drawable/ic_baseline_call_24"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contact3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:textSize="25dp"
        android:textColor="@color/colorAccent"
        android:text="@string/guard_1"
        android:fontFamily="@font/nunito_semibold"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/contact2"
        app:layout_constraintStart_toEndOf="@id/callIcon"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/callIcon4"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/callIcon3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="20dp"
        android:src="@drawable/ic_baseline_call_24"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contact4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:textSize="25dp"
        android:textColor="@color/colorAccent"
        android:text="@string/guard_2"
        android:fontFamily="@font/nunito_semibold"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/contact3"
        app:layout_constraintStart_toEndOf="@id/callIcon"/>
</androidx.constraintlayout.widget.ConstraintLayout>