<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_activities.UserSignUpActivity"
    android:layout_marginVertical="20dp"
    android:layout_marginHorizontal="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="Required* (MNNIT G-Suite)"
        app:helperTextTextColor="#A60606"
        android:hint="@string/signup_email"
        app:layout_constraintBottom_toTopOf="@+id/emailPasswordLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636"
        android:layout_marginHorizontal="20dp"
        app:startIconDrawable = "@drawable/ic_baseline_email_24"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailPasswordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/emailTextLayout"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumberFieldLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:endIconMode="password_toggle"
        app:helperText="Required* (Minimum 6 characters)"
        app:helperTextTextColor="#A60606"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumberFieldLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/signup_phone_number"
        tools:text=""
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:helperText="Required*"
        app:helperTextTextColor="#A60606"
        app:prefixText="+91"
        app:layout_constraintBottom_toTopOf="@+id/helperTextForEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailPasswordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_baseline_phone_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/helperTextForEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/getOtpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberFieldLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getOtpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#246EE9"
        android:elevation="2dp"
        android:text="@string/signup_get_otp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/alreadyAnUserLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helperTextForEmail" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/getOtpProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:foregroundGravity="center"
        app:layout_constraintTop_toTopOf="@id/getOtpButton"
        app:layout_constraintBottom_toBottomOf="@id/getOtpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:indicatorColor="#246EE9"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@id/alreadyAnUserLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/getOtpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/alreadyAnUserText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_an_user"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/log_in_text"
            android:textColor="#246EE9"
            android:textStyle="bold"
            android:textSize="16sp"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>